# nestruct

./: Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: lib.rs
tests/: expand.rs  flatten_complex.rs  nest.rs  nest_complex.rs  serde_flatten.rs
tests/expanded/: flatten_complex.rs  nest_complex.rs
