[package]
name = "nestruct"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.37"
quote = "1.0.17"
syn = { version = "1.0.91", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
