[package]
name = "nestruct"
version = "0.1.0"
edition = "2021"
authors = ["Yasuyuki Yamada <yasuyuki.ymd@gmail.com>"]
license = "MIT"
repository = "https://github.com/yasuyuky/nestruct"
description = "A Rust library that provides macros to easily flatten or nest structs and enums in your code."
keywords = ["macros", "structs", "enums", "flatten", "nest"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.9.0"
proc-macro2 = "1.0.37"
quote = "1.0.17"
syn = { version = "2.0.4", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
